@@ -1,3 +1,9 @@
+2001-11-11  Andrew Cagney  <ac131313@redhat.com>
+
+	From Mark Kettenis  <kettenis@gnu.org>:
+	* breakpoint.c (breakpoint_re_set_one): Don't discard SHLIB
+	breakpoints when they fail.
+
 2001-11-10  Andrew Cagney  <ac131313@redhat.com>
 
 	* p-exp.y: Strip trailing ^M.
